Using the version ENV var now

--- a/package.yml
+++ b/package.yml
@@ -13,8 +13,8 @@ builddeps  :
     - git
     - golang
 setup      : |
-    mkdir -p micro-1.1.2/src/github.com/zyedidia/micro
-    tar -xvf $sources/v1.1.2.tar.gz -C micro-1.1.2/src/github.com/zyedidia/micro --strip-components=1
+    mkdir -p micro-$version/src/github.com/zyedidia/micro
+    tar -xvf $sources/v$version.tar.gz -C micro-$version/src/github.com/zyedidia/micro --strip-components=1
 install    : |
     export GOPATH=$workdir
     cd src/github.com/zyedidia/micro
