Update micro to 2.0.7
Summary:
**Changelog:**
- Improvements
 - Key sequences can be bound with <Key1><Key2> for example <Ctrl-x><Ctrl-c>.
 - Different keybindings for buffers, command bar, and terminal panes can be specified.
 - Better support for complex keybindings. Such as function keys, PgUp, PgDown, Delete with modifiers.
 - Support for multiple cursors (internal clipboards for each cursor).
 - Support for OSC52 (copy and paste via your terminal, which works over ssh).
 - New clipboard option (default external). Set to internal for internal clipboard only. Set to external for xclip/xsel external clipboard. Set to terminal to use OSC52. (See > help copypaste for details on enabling support in your terminal).
 - Better support for obscure terminals (reading terminfo dynamically).
 - Better truecolor detection.
 - No duplicates in up-arrow history.
 - Graceful exit when receiving SIGTERM.
- Bug fixes
 - Fix issue when fastdirty is off
 - Syntax highlighting and linting fixes
- Packager notes
 - man page is now available see `man micro`

Test Plan:
- micro --version
- install and use filemanager plugin
- create a new text file, edit, save, re-open
- Write this summary using micro

Reviewers: #triage_team, JoshStrobl

Reviewed By: #triage_team, JoshStrobl

Subscribers: JoshStrobl

Differential Revision: https://dev.getsol.us/D9598

--- a/package.yml
+++ b/package.yml
@@ -1,9 +1,10 @@
 name       : micro
-version    : 2.0.6
-release    : 19
+version    : 2.0.7
+release    : 20
 source     :
-    - git|https://github.com/zyedidia/micro.git : v2.0.6
+    - git|https://github.com/zyedidia/micro.git : v2.0.7
 license    : MIT
+homepage   : https://micro-editor.github.io
 component  : editor
 summary    : Micro is a terminal-based text editor that aims to be easy to use and intuitive
 description: |
@@ -23,3 +24,4 @@ install    : |
     cd src/github.com/zyedidia/micro
     %make install-all
     install -Dm00755 $GOPATH/bin/micro $installdir/usr/bin/micro
+    install -Dm00644 $workdir/src/github.com/zyedidia/micro/assets/packaging/micro.1 $installdir/usr/share/man/man1/micro.1
