Update micro to 2.0.11
**Changelog:**

- Fixes
 - OSC52 clipboard support.
 - Syntax highlighting.
 - Misc bugs.
- Improvements
 - Syntax highlighting improvements and new languages.
 - New hlsearch option to highlight search results.
 - Rust clippy and go vet linters.
 - Switch to using go embed instead of go-bindata.

Signed-off-by: Troy Harvey <harveydevel@gmail.com>

--- a/package.yml
+++ b/package.yml
@@ -1,27 +1,22 @@
 name       : micro
-version    : 2.0.10
-release    : 25
+version    : 2.0.11
+release    : 26
 source     :
-    - git|https://github.com/zyedidia/micro.git : v2.0.10
+    - git|https://github.com/zyedidia/micro.git : v2.0.11
 license    : MIT
 homepage   : https://micro-editor.github.io
 component  : editor
 summary    : Micro is a terminal-based text editor that aims to be easy to use and intuitive
 description: |
     Micro is a terminal-based text editor that aims to be easy to use and intuitive, while also taking advantage of the full capabilities of modern terminals
-extract    : no
 networking : yes
 builddeps  :
     - git
     - golang
 rundeps    :
     - xclip
-setup      : |
-    mkdir -p micro-$version/src/github.com/zyedidia/micro
-    cp -R $sources/micro.git/. micro-$version/src/github.com/zyedidia/micro/
+build      : |
+    %make
 install    : |
-    export GOPATH=$workdir
-    cd src/github.com/zyedidia/micro
-    %make install-all
-    install -Dm00755 $GOPATH/bin/micro $installdir/usr/bin/micro
-    install -Dm00644 $workdir/src/github.com/zyedidia/micro/assets/packaging/micro.1 $installdir/usr/share/man/man1/micro.1
+    install -Dm00755 $workdir/micro $installdir/usr/bin/micro
+    install -Dm00644 $workdir/assets/packaging/micro.1 $installdir/usr/share/man/man1/micro.1
