micro: Add default editor
Summary:
Ensure EDITOR and VISUAL are set should a user remove the default editor nano.

User changes in ~/.bashrc and its equivalents override this.

Signed-off-by: Troy Harvey <harveydevel@gmail.com>

Test Plan: - Remove nano and ensure micro is the new default.

Reviewers: #triage_team, ermo

Reviewed By: #triage_team, ermo

Subscribers: ermo

Differential Revision: https://dev.getsol.us/D14068

--- a/package.yml
+++ b/package.yml
@@ -1,6 +1,6 @@
 name       : micro
 version    : 2.0.11
-release    : 26
+release    : 27
 source     :
     - git|https://github.com/zyedidia/micro.git : v2.0.11
 license    : MIT
@@ -20,3 +20,8 @@ build      : |
 install    : |
     install -Dm00755 $workdir/micro $installdir/usr/bin/micro
     install -Dm00644 $workdir/assets/packaging/micro.1 $installdir/usr/share/man/man1/micro.1
+
+    # Set EDITOR and VISUAL defaults should nano be removed.
+
+    install -Dm00644 $pkgfiles/80-micro-is-default-EDITOR-and-VISUAL.sh $installdir/usr/share/defaults/etc/profile.d/80-micro-is-default-EDITOR-and-VISUAL.sh
+    install -Dm00644 $pkgfiles/80-micro-is-default-EDITOR-and-VISUAL.fish $installdir/usr/share/defaults/etc/profile.d/80-micro-is-default-EDITOR-and-VISUAL.fish
